[package]
name = "yellowstone_grpc_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# yellowstone-grpc-client = "1.0.0"
# yellowstone-grpc-proto = "1.14.2"
tokio = { version = "1.0", features = ["full", "macros"] }
anyhow = "1.0"
solana-sdk = "1.17"
colored = "2.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
solana-program = "1.10"
serde_json = "1.0"
solana-client = "1.17"
base64 = "0.21"
bincode = "1.3"
solana-account-decoder = "1.10.0"
borsh = "1.5.3"
bitflags = "2.4.0"